--- a/package.json
+++ b/package.json
@@ -1,3 +1,18 @@
-{
-	"author": "Alessandro"
+ {
+  "name": "fcc-learn-npm-package-json",
+  "author": "Alessandro Pereira Rodrigues",
+  "dependencies": {
+    "express": "^4.14.0"
+  },
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "8.11.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://aleperrod.github.io/backenddev/"
+  }
 }
